--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Work-portfolio</title>
+  <title>Yuka Niwa Portholio</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="ダウンロード.png">
+  <link rel="icon" href="Logo.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
+  <link href="https://fonts.googleapis.com/css?family=Vollkorn rel="stylesheet">
 </head>
 <body>
   <header>
     <div class="sss">
-    <h1>My Work</h1>
+    <a href="#page_top" class="page_top_btn"><img src="Logo.png" alt=""></a>
   </div>
 
   <div class="pc-menu">
     <nav>
       <ul>
         <li><a href="#abc">About</a></li>
-        <li><a href="#def">Works</a></li>
-        <li><a href="#ghi">News</a></li>
+        <li><a href="#def">skills</a></li>
+        <li><a href="#ghi">Works</a></li>
         <li><a href="#jkl">Contact</a></li>
-        <div><a href="index.html" target="_blank"><img src="aikonn (1).png" alt="インスタ画像" width="21 " height="21">
-        </a></div>
       </ul>
       </nav>
     </div>
@@ -31,101 +31,136 @@
       <span class="material-icons" id="open">menu</span>
     </div>
   </header>
+  <div id="page_top">
+  <div id="target-2">
   <div class="overlay">
     <span class="material-icons" id="close">close</span>
     <nav>
       <ul>
         <li><a href="#abc">About</a></li>
-        <li><a href="#def">Works</a></li>
-        <li><a href="#ghi">News</a></li>
+        <li><a href="#def">skills</a></li>
+        <li><a href="#ghi">Works</a></li>
         <li><a href="#jkl">Contact</a></li>
-        <div><a href="index.html" target="_blank"><img src="aikonn (1).png" alt="インスタ画像" width="21 " height="21">
-        </a></div>
       </ul>
       </nav>
   </div>
 
-  <section>
-    <img src="mainvisual-pc.jpg" alt="" class="main-img main-img2" >
-  </section>
-
-  <div class="container">
-  <section class="ccc">
-    <h1 id="abc">About</h1>
-    <p>Xーーーxx Ashley</p>
-    <p>2th Floor ーーーーーー Building x-x-xーーーーーーーー, Tokyo 106-0031 Japan <br>
-      tel: 000-0000-0000 <br>
-      url: ーーーー <br>
-      mail: ーーーーーー</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad incidunt possimus, doloremque eligendi odio et vel quasi cum <br>
-      natus, deserunt, distinctio eos accusamus asperiores at harum numquam modi ea sequi!</p>
-  </section>
-
-  <section class="img">
-    <h1 id="def">Works</h1>
-    <div class="img1">
-     <img src="works1.jpg" alt="">
-     <img src="works2.jpg" alt="">
-     <img src="works3.jpg" alt="">
-     <img src="works4.jpg" alt="">
-     <img src="works5.jpg" alt="">
-     <img src="works6.jpg" alt="">
+  <section class="name">
+    <div>
+    <div class="name3">
+    <h1>Yuka Niwa <br>Portholio</h1>
+      <p>Welcome to my portfolio !</p>
     </div>
-  </section>
+    <section>
+      <div class="enn">
+        <div class="block">
+          <svg class="circleText" viewBox="0 0 100 100">
+            <path d="M 0,50 a 50,50 0 1,1 0,1 z" id="circle" />
+            <text class="circleText__text">
+              <textPath xlink:href="#circle">
+                welcome to my portfolio site yukaniwa322 tank you!
+              </textPath>
+            </text>
+          </svg>
+        </div>
+      </div>
+    </section>
+  </div>
 
-  <section class="News">
-    <h1 id="ghi">News</h1>
-<hr>
-<div class="www"><p>2020.XX.XX </p>
-  <p>デザイン雑誌
-  ーーーーーに掲載していただきました。</p></div>
-  <hr>
-  <div class="www"><p>2020.XX.XX </p>
-  <p>ＸＸ月ＸＸ日から写真集ーーーーーーーーの販売を開始します。</p></div><hr>
-  <div class="www"><p>2019.XX.XX </p>
-    <p>【イベント開催のお知らせ】テキストテキストテキストテキストテキストテキストテキスト</p></div><hr>
-    <div class="www"><p>2019.XX.XX</p>
-      <p>デザイン雑誌ーーーーーに掲載していただきました。</p></div><hr>
-      <div class="www"><p>2019.XX.XX </p>
-      <p>【個展開催のお知らせ】テキストテキストテキストテキストテキスト</p> </div><hr>
-     
-  </section>
 
-  <section class="Contact">
-    <h1 id="jkl">Contact</h1>
+
+    <div class="noo">
+  <img src="niwa2.png" alt="" class="niwa3">
+  </div>
+  </section>
  
-    <div>
-    <label for="NAME">NAME</label>
-    </div>
-    <div>
-    <input type="text" size="20" id="NAME">
-    </div>
+
  
-  
+<section class="main1"> 
+<div>
+ <hr> <h1 id="abc">About</h1> <hr>
+</section>
 
-      <div>
-    <label for="mail">E-mail</label>
-    </div>
-    <div>
-    <input type="mail" id="mail">
-    </div>
-
-
-    <div>
-    <label for="MESSAGE">MESSAGE</label>
-    </div>
-    <div>
-     <textarea placeholder=""id="MESSAGE"></textarea>
+  <section class="main">
+    <div class="pic">
+      <img src="niwa.jpeg" alt="#" class="pic1">
     </div>
 
-      <div class="btn"> <a href="index.html2">送信</a></div>
-    </div>
+    <div class="desc ">
+      <h2>丹羽 優花 - Yuka Niwa</h2>
+       <p>2002年、岐阜県岐阜市生まれ。</p>
+       <p>大学卒業後、調剤事務に就職。</p>
+       <p>趣味はカフェ巡り、音楽を聴くこと、旅行。
+      </p>
+       <p>2024年8月、スクールに入学し、WEBデザインやコーディングについて学ぶ。</p>
+       <div class="des1">
+       <a href="product-1.html">VIEW MORE</a>
+      </div>
+
   </section>
+
+
+<div class="skk">
+ <hr> <h1 id="def">skills</h1><hr>
 </div>
-<footer>
-  <small>© 2020 M Work</small>
-</footer>
-<script src="js/main.js"></script>
+  <section class="skills1">
+    <div class="ttt">
+    <div class="tt1">
+      <h3>Web Design</h3>
+      <img src="dl.jpg" alt="" class="dll">
+      <p>Webサイト、バナーなどのグラフィックデザイン制作ができます。ジャンルにとらわれず、様々なテイストのデザインを制作します。見た目の部分では、文字組み・余白感・視線の動きを特に意識してデザインしています。</p>
+    </div>
+    <div class="tt1">
+      <h3> Web Development</h3>
+      <img src="hhh.jpg" alt="" class="dll">
+      <p>HTML/CSSを用いてデザインを正しく再現することができます。また、Javascript/jQueryを用いてサイトに動きをつけることも可能です。どのデバイスで見ても崩れることがないように注意して制作しています。</p>
+    </div>
+  </div>
+  </section>
 
+
+  <section class="Works2">
+    
+    <h1 id="ghi">Works</h1> 
+    <p>制作実績</p>
+  
+  
+<section class="Works1">
+  <div class="wok1">
+ <a href="https://yukaniwa.github.io/my-sit1/"><img src="スクリーンショット 2024-12-08 133256.png" alt=""></a>
+</div>
+<div class="wok1">
+<a href="https://yukaniwa.github.io/daihati/"><img src="スクリーンショット 2024-12-08 184728.png" alt=""></a>
+</div>
+<div class="wok1">
+  <img src="スクリーンショット 2024-12-08 192849.png" alt="">
+</div>
+</section>
+</section>
+<section class="Contact">
+ 
+
+  <div class="Contact1">
+    <br><br>
+ <h1 id="jkl">Contact</h1>
+ <p>お問い合わせ</p>
+</div>
+<div class="ini">
+  <div>
+  <p>下記メールアドレスにてご連絡ください。</p>
+</div>
+<div class="aoa">
+ <a href="index.html2">yukaniwa322@icloud.com</a>
+</div>
+
+</div>
+
+ <footer>
+  <small>© 2024 Yuka Niwa Portholio</small>
+</footer>
+  </section>
+
+</div>
+  <script src="js/main.js"></script>
 </body>
 </html>
